Fixed issue where canvas container had extra space under the canvas

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
     cursor: default !important;
 }
 
-/* canvas {
-    width: 100%;
-    height: 100%;
-} */
+#canvasContainer {
+    height: 0;
+}
